# amnesia

./: .gitignore  .gitmodules  README.md  build.zig  dither.cpp  dither_bench.cpp  dt  main.cpp  main.zig  meson.build  palette.hex  types.h
.cache/clangd/index/: dither_bench.cpp.620C3189C3ACE0D7.idx
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  dither_bench
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: meson-log.txt
libs/: stb_image.h
prod/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  dither_bench
prod/meson-info/: intro-buildoptions.json  intro-installed.json  intro-targets.json  intro-tests.json  meson-info.json
prod/meson-logs/: meson-log.txt
src/: color.cpp  dither.cpp  gpgpu_hello.ts  gpu.zig  luma.cpp  rl.h  shader.wgsl  simd.c
src/cshader/: main.zig  sample_utils.zig
